# windows-jre-laucher

./: .gitignore  conanfile.txt  init-project.ps1  launcher.cpp  meson.build  readme.md
src/: launcher.cpp
